# serde_with_extension

./: Cargo.toml
src/: bool_from_number.rs  decimal_from_number.rs  lib.rs
tests/: bool_from_number.rs  decimal_from_number.rs
